Revision history for {{$dist->name}}

{{$NEXT}}

0.24      2017-08-24 16:14:03 -0400
  - Add [AlienBase::Wrapper] plugin

0.23      2017-08-23 07:59:38 -0400
  - Add x_alienfile meta
  - Add alienfile_meta property

0.22      2017-08-03 17:35:48 -0400
  - Fix important typo in AlienBase::Doc

0.21      2017-07-31 09:02:01 -0400
  - Swallow diagnostic causing travis build failures

0.20      2017-07-05 14:47:31 -0400
  - Fix bug where we were aggresively requiring AB 0.40 when
    0.32 would be sufficent

0.19      2017-06-10 13:33:21 -0400
  - Tweak requirements to handle recent deprecations

0.18      2017-06-10 06:42:34 -0400
  - Fix support for patch_ffi hook

0.17      2017-06-10 06:33:36 -0400
  - Add support for _ffi hooks

0.16      2017-03-28 14:18:44 -0400
  - Fix some typos
  - Bump prereq for Alien::Build to 0.32

0.15      2017-03-28 13:17:04 -0400
  - Include prereqs in documentation for Buid.PL and Makefile.PL
  - Bump prereq for Alien::Build to 0.31

0.14      2017-03-28 12:27:53 -0400
  - Remove accidentally included [AlienBase] plugin

0.12      2017-03-28 12:23:48 -0400
  - Add Dist::Zilla::Plugin::AlienBase::Doc

0.11      2017-03-10 15:08:52 -0500
  - Require Alien::Build 0.25 and Alien::Build 0.038

0.10      2017-03-01 11:38:06 +1100
  - If Alien::Base is a prereq make it 0.036 at minimum as
    that is the first version compatible with Alien::Build
  - require Alien::Build 0.19 for very minor bug fixes

0.09      2017-02-09 14:10:08 -0500
  - require Alien::Build 0.15 for bug fixes

0.08      2017-02-08 07:57:56 -0500
  - require Alien::Build 0.11 for bug fixes

0.07      2017-02-06 05:34:43 -0500
  - Make Alien::Build a configure and build require
    in addition to Alien::Build::MM (or ::MB)

0.06      2017-02-04 11:36:45 -0500
  - require Alien::Build 0.08

0.05      2017-02-04 11:24:04 -0500
  - Updated documentation for MB support
  - require Alien::Build 0.07

0.04      2017-02-02 13:36:30 -0500